Introduce `toList` method on queries